# qrcode-api

./: main.py  pyproject.toml  schema.py
