[tool.poetry]
name = "qrcode-api"
version = "0.1.0"
description = ""
authors = ["'Etherial' <'typicaluserinfinite@gmail.com'>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
qrcode = "^8.0"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
pillow = "^11.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
